# on_air

./: .gitignore  README.md
display/: Makefile  README.md  code.py  secrets.py
docs/: Display Build.docx  Display Build.md  hardware.org  ml.org  workerkv.org
sighandler/: Makefile  README.md  index.js  wrangler.toml
voice-assistant/: CMakeLists.txt  README.md
voice-assistant/main/: status_toggle.c
voice-assistant/sig/: LICENSE  Makefile  README.md
voice-assistant/smalltalk/: CMakeLists.txt
voice-assistant/smalltalk/main/: CMakeLists.txt  KConfig.projbuild  command_responder.cc  component.mk  main_functions.cc  main_functions.h
voice-assistant/smalltalk/main/esp/: audio_provider.cc
voice-assistant/smalltalk/main/http/: toggle_status.cc  toggle_status.h  unexpectedeof_casa_root_cert.pem  wifi.cc  wifi.h
voice-assistant/smalltalk/main/micro_features/: hi_features_data.cc  hi_features_data.h  hi_micro_features_data.cc  hi_micro_features_data.h  micro_model_settings.cc  micro_model_settings.h  off_features_data.cc  off_features_data.h  off_micro_features_data.cc  off_micro_features_data.h  on_features_data.cc  on_features_data.h  on_micro_features_data.cc  on_micro_features_data.h  smalltalk_features_data.cc  smalltalk_features_data.h  smalltalk_micro_features_data.cc  smalltalk_micro_features_data.h  tiny_conv_micro_features_model_data.cc  tiny_conv_micro_features_model_data.h  tiny_conv_micro_features_model_data_custom.cc  visual_features_data.cc  visual_features_data.h
voice-assistant/train/: .gitignore  cleanup.sh  convert.sh  freeze.sh  generate.sh  (+6 more)
(+8 files in other folders)
